modificacion de gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -40,12 +40,15 @@ target/
 
 # NetBeans specific
 nbproject/private/
+nbproject/
 build/
 nbbuild/
 dist/
 nbdist/
 nbactions.xml
 nb-configuration.xml
+build.xml
+manifest.mf
 
 
 # OS
